[package]
name = "vmprotect-macros"
description = "Attribute macro for vmprotect"
version = "0.1.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
darling = "0"
